# masimu

simtetra-main/simu/: 137Cs.mac  152Eu.mac  252cf.mac  CMakeLists.txt  PARISMalia.gdml  PrimaryGenerator.cc  allParis.sh  auto252Cf_neutrons.mac  bincenters_PARIS278.txt  bincenters_all.csv  debug_mult_10.mac  duo.mac  energies_list_PARIS278.mac  energies_list_PARIS305.mac  energies_list_PARIS90.mac  fix_alias_issue.sh  fix_prompt_files.sh  fix_prompt_files_v2.sh  fixed_mult_01.mac  fixed_mult_02.mac  fixed_mult_03.mac  fixed_mult_04.mac  fixed_mult_05.mac  fixed_mult_06.mac  fixed_mult_07.mac  fixed_mult_08.mac  fixed_mult_09.mac  fixed_mult_10.mac  fixed_mult_11.mac  fixed_mult_12.mac  generate_energies_lists.sh  mono_n_02.mac  mono_n_05.mac  mono_n_06.mac  mono_n_12.mac  mono_n_13.mac  mono_n_14.mac  mono_n_500keV.mac  new_energies_list_PARIS130.mac  new_energies_list_PARIS278.mac  (+41 more)
simtetra-main/simu/bincenters423_out/: bincenters_PARIS110.txt  bincenters_PARIS130.txt  bincenters_PARIS235.txt  bincenters_PARIS262.txt  bincenters_PARIS278.txt  bincenters_PARIS305.txt  bincenters_PARIS50.txt  bincenters_PARIS70.txt  bincenters_PARIS90.txt  bincenters_all.csv
simtetra-main/simu/bincenters_out/: energies_list_PARIS305.mac
simtetra-main/simu/bincenters_out_res/: energies_list_PARIS110.mac  energies_list_PARIS130.mac  energies_list_PARIS235.mac  energies_list_PARIS262.mac  energies_list_PARIS278.mac  energies_list_PARIS305.mac  energies_list_PARIS50.mac  energies_list_PARIS70.mac  energies_list_PARIS90.mac
simtetra-main/simu/include/: ActionInitialization.hh  (+7 more)
(+287 files in other folders)
